# concord-bft

bftengine/src/bftengine/: KeyManager.cpp  KeyManager.h  KeyStore.cpp  ReplicaImp.cpp  ReplicaImp.hpp
bftengine/src/preprocessor/: PreProcessor.cpp  PreProcessor.hpp  PreProcessorRecorder.hpp
kvbc/src/: ReplicaImp.cpp
kvbc/tools/: CMakeLists.txt
kvbc/tools/kv_blockchain_editor/: CMakeLists.txt  kv_blockchain_editor.cpp  kv_blockchain_editor.hpp
reconfiguration/src/: reconfiguration_handler.cpp
tests/apollo/: test_skvbc_reconfiguration.py
util/include/: hex_tools.h  json_output.hpp
util/src/: hex_tools.cpp
